overflow issues fixed

--- a/Assigmnents/Assigmnent2/styles.css
+++ b/Assigmnents/Assigmnent2/styles.css
@@ -86,7 +86,7 @@ html, body {
 .footer {
   background-color: hsl(75, 98%, 80%);
   width: 100%;
-  height: 3vw;
+  height: 10vh;
   flex-shrink: 0;
 
 }
@@ -164,6 +164,7 @@ html, body {
   width: 100%;
   height: 100%;
   min-width: 30%;
+  padding-bottom: 1rem;
 }
 
 .container > * {
@@ -177,6 +178,7 @@ html, body {
 
 .description {
   padding: 1rem 0;
+  min-height: 8rem;
 }
 
 .link {
